Validation of the whole code

--- a/gallery.html
+++ b/gallery.html
@@ -17,159 +17,138 @@
     </style>
 </head>
 
-<header>
-
-
-    <nav>
-        <div class="header-container">
-            <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt=""></a>
-            <ul class="menu">
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="ourstory.html">Our story</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a id="reservation-cta" href="reservation.html">Reservation</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <h1 class="h1-gallery">GALLERY</h1>
-
-    <nav class="nav2">
-        <ul class="menu-nav">
-            <li><a href='#lunch'> Lunch </a></li>
-            <li><a href='#dinner'> Dinner </a></li>
-            <li><a href='#beverages'> Beverages </a></li>
-            <li><a href='#coffee & dessert'> Coffee & Dessert </a></li>
-        </ul>
-    </nav>
-</header>
-
 <body>
+    <header>
+        <nav>
+            <div class="header-container">
+                <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_black.svg" alt=""></a>
+                <ul class="menu">
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="ourstory.html">Our story</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a id="reservation-cta" href="reservation.html">Reservation</a></li>
+                </ul>
+            </div>
+        </nav>
+        <h1 class="h1-gallery">GALLERY</h1>
 
+        <nav class="nav2">
+            <ul class="menu-nav">
+                <li><a href='#lunch'> Lunch </a></li>
+                <li><a href='#dinner'> Dinner </a></li>
+                <li><a href='#beverages'> Beverages </a></li>
+                <li><a href='#coffee-dessert'> Coffee & Dessert </a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="container">
-
-
         <div id="LUNCH">
             <h2 class="h2-gallery">
                 LUNCH
             </h2>
         </div>
-
-
         <div class="main">
             <div class="row">
                 <div class="banner">
-                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520">
                     <h4 class="h4">Garnish</h4>
                     <p class="paragraph1">Come and choose from a <br>wide range of freshly <br>made side dishes.
                 </div>
             </div>
-
-            <img class="potato" src="assets/images/potato.jpg" alt=" Glazed new potatoes with parsley close-up on the table. horizontal top view">
+            <img class="potato" src="assets/images/potato.jpg"
+                alt=" Glazed new potatoes with parsley close-up on the table. horizontal top view">
             <img class="tartar" src="assets/images/tartar.jpg" alt="spicy beef tartar gjoel kro style">
             <div class="row">
                 <div class="banner">
-                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520">
                     <h5>Tartar</h5>
                     <p class="paragraph2">Have a bite of our <br>special tartar with spices. </p>
                 </div>
             </div>
         </div>
-
-
-
         <div class="main">
-
             <div class="row">
                 <div class="banner">
-                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520">
                     <h4 class="h4">Salmon</h4>
                     <p class="paragraph1">Taste our salmon and <br> experience the moment <br>fully next to the sea.</p>
                 </div>
             </div>
             <img class="salmon" src="assets/images/salmon-min.jpg" alt="Fresh local salmon filet">
-            <img class="fish" src="assets/images/fish and chip.jpg" alt="Crispy delicious fish and chips made from local cod ">
+            <img class="fish" src="assets/images/fish-chips.jpg"
+                alt="Crispy delicious fish and chips made from local cod ">
             <div class="row">
                 <div class="banner">
-                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520">
                     <h5 class="h5">Fish & <br>Chips</h5>
                     <p class="paragraph3">Do you like to stick <br>to your habits? <br>Have an excellent bite <br>of our
                         fish and chips.</p>
                 </div>
             </div>
         </div>
-
-
         <div id="DINNER">
             <h2 class="h2-gallery">
                 DINNER
             </h2>
         </div>
-
         <div class="main">
             <div class="row">
                 <div class="banner">
-                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520">
                     <h4 class="h4">Chicken</h4>
                     <p class="paragraph1">Chicken for your tastebuds!</p>
                 </div>
             </div>
-
             <img class="chicken" src="assets/images/chicken.jpg" alt="delicious roast chicken">
             <img class="cod" src="assets/images/cod.jpg" alt="fresh local cod filet with homemade lemon balm sauce">
             <div class="row">
                 <div class="banner">
-                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520">
                     <h5>Cod</h5>
                     <p class="paragraph2">Taste our new <br>mouth-watering recipes.</p>
                 </div>
             </div>
         </div>
-
-
-
         <div class="main">
 
             <div class="row">
                 <div class="banner">
-                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520">
                     <h4 class="h4">Caviar</h4>
                     <p class="paragraph1">Are you long for <br>something different? <br>Don’t be shy and ask<br> for our
                         caviar!</p>
                 </div>
             </div>
             <img class="caviar" src="assets/images/carviar.jpg" alt="Premium beluga caviar">
-            <img class="pork" src="assets/images/pork belly 2.jpeg" alt="flaeskesteg with traditional danish potato garnish and persil sauce">
+            <img class="pork" src="assets/images/pork-belly-2.jpeg"
+                alt="flaeskesteg with traditional danish potato garnish and persil sauce">
             <div class="row">
                 <div class="banner">
-                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520">
                     <h5>Pork</h5>
                     <p class="paragraph2">Amazing recipes for <br>amazing customers!</p>
                 </div>
             </div>
         </div>
-
         <div id="BEVERAGES">
             <h2 class="h2-gallery">
                 BEVERAGES
             </h2>
         </div>
-
         <div class="main">
             <div class="row">
                 <div class="banner">
-                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520">
                     <h4 class="h4">Gin</h4>
                     <p class="paragraph1">A refreshing taste <br> you’ll remember.</p>
                 </div>
             </div>
-
             <img class="gin" src="assets/images/gin.jpg" alt="gin with lemon and mint">
-            <img class="orange" src="assets/images/pexels-timur-weber-8679366.jpg" alt="fresh orange juice">
+            <img class="orange" src="assets/images/orange-juice.jpg" alt="fresh orange juice">
             <div class="row">
                 <div class="banner">
-                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520">
                     <h5 class="h5">Orange <br>Juice</h5>
                     <p class="paragraph3">Have a glass of <br>freshly made orange juice<br> without any artificial
                         additives.</p>
@@ -182,16 +161,16 @@
         <div class="main">
             <div class="row">
                 <div class="banner">
-                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                    <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520">
                     <h4 class="h4">Lemonade</h4>
                     <p class="paragraph1">Freshen up yourself with <br>our sweet and cooling lemonade.</p>
                 </div>
             </div>
             <img class="lemonade-min" src="assets/images/lemonade-min.jpg" alt="homemade lemonade">
-            <img class="strawberry" src="assets/images/pexels-ehioma-osih-10766779.jpg" alt="strawberry">
+            <img class="strawberry" src="assets/images/strawberry-juice.jpg" alt="strawberry">
             <div class="row">
                 <div class="banner">
-                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                    <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520">
                     <h5>Strawberry Smoothie</h5>
                     <p class="paragraph5">Taste local freshness.</p>
                 </div>
@@ -203,7 +182,7 @@
 
 
 
-    <div id="COFFEE & DESSERT">
+    <div id="coffee-dessert">
         <h2 class="h2-gallery">
             COFFEE & DESSERT
         </h2>
@@ -212,17 +191,17 @@
     <div class="main">
         <div class="row">
             <div class="banner">
-                <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520">
                 <h6>Chocolate <br>Ice Cream</h6>
                 <p class="paragraph4">We are open to your cold sugar cravings.</p>
             </div>
         </div>
 
-        <img class="choco" src="assets/images/choco icecream.jpg" alt="amazing homemade chocolate icecream">
+        <img class="choco" src="assets/images/choco-icecream.jpg" alt="amazing homemade chocolate icecream">
         <img class="coffee" src="assets/images/coffee.jpg" alt="delicious coffee">
         <div class="row">
             <div class="banner">
-                <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520">
                 <h5>Coffee</h5>
                 <p class="paragraph2">Power up with coffee!</p>
             </div>
@@ -235,16 +214,16 @@
 
         <div class="row">
             <div class="banner">
-                <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520x">
+                <img class="background2" src="assets/images/background2.jpg" alt="background2" width="520">
                 <h4 class="h4">Pannacotta</h4>
                 <p class="paragraph1">Try it, you won’t regret it!</p>
             </div>
         </div>
         <img class="panacotta" src="assets/images/panacotta.jpg" alt="strawberry vanilla panacotta">
-        <img class="choclate" src="assets/images/choclate cake.jpg" alt="chocolate cake">
+        <img class="choclate" src="assets/images/chocolate-cake.jpg" alt="chocolate cake">
         <div class="row">
             <div class="banner">
-                <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520x">
+                <img class="background2" src="assets/images/background1.jpg" alt="background1" width="520">
                 <h5>Chocolate <br>Cake</h5>
                 <p class="paragraph5">Give yourself a sweet <br>treat after a heavy meal.</p>
             </div>
@@ -254,7 +233,8 @@
 
     <footer class="footer">
         <div class="footer-container">
-            <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_white.svg" style="height:80px;" alt="Gjol Kro Logo"></a>
+            <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_white.svg" style="height:80px;"
+                    alt="Gjol Kro Logo"></a>
             <div class="footer-row">
                 <div class="footer-col">
                     <h4>Explore more</h4>
@@ -297,8 +277,10 @@
                 <div class="footer-col">
                     <h4>Follow us</h4>
                     <div class="social-links">
-                        <a href="https://www.facebook.com/GjoelKro" target="_blank"><i id="facebook-icon" class="fab fa-facebook-f"></i></a>
-                        <a href="https://www.instagram.com/gjoel_kro/" target="_blank"><i class="fab fa-instagram "></i></a>
+                        <a href="https://www.facebook.com/GjoelKro" target="_blank"><i id="facebook-icon"
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/gjoel_kro/" target="_blank"><i
+                                class="fab fa-instagram "></i></a>
                     </div>
                 </div>
             </div>
