--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     accompanied by the wide selection of traditional Danish dishes. We serve the classics with a modern
                     twist.</p>
                 <form method="get" action="reservation.html">
-                    <button class="hero-button" type="submit">Book a table<table></table></button>
+                    <button class="hero-button" type="submit">Book a table</button>
                 </form>
             </div>
             <div class="hero-image"><img id="landing-image" style="width: 100%; height: 100%"
@@ -45,8 +45,7 @@
     </header>
     <main>
         <section class="promotion">
-            <img class="promo-image" style="max-width:40vw; height: 80vh;" src="assets/images/fish promo.jpg"
-                alt="Gjol Kro 20% off promotion">
+            <img class="promo-image" style="max-width:40vw; height: 80vh;" src="assets/images/fish-promo.jpg" alt="Gjol Kro 20% off promotion">
             <div class="promo-form">
                 <h2>Dine with us for 20% OFF</h2>
                 <h4>Subscribe to our newsletter and recieve a 20% discount <br> in your mailbox!</h4>
@@ -71,12 +70,9 @@
             <div class="grid-section" id="content3">
                 <p>The menu will vary depending on what raw goods are available during the season.</p>
             </div>
-            <div class="grid-section" id="content4"><img src="assets/images/salmon bread.jpg"
-                    style="height: 100%; width: 100%; object-fit: cover;"
-                    alt="Salmon Smørrebrød fresh organic local ingredients ">
+            <div class="grid-section" id="content4"><img src="assets/images/salmon-bread.jpg" style="height: 100%; width: 100%; object-fit: cover;" alt="Salmon Smørrebrød fresh organic local ingredients ">
             </div>
-            <div class="grid-section" id="content5"><img src="assets/images/pork belly.jpg"
-                    style="height: 100%; width: 100%; object-fit: cover;" alt="Flæskesteg Gjol Kro restaurant"></div>
+            <div class="grid-section" id="content5"><img src="assets/images/pork-belly.jpg" style="height: 100%; width: 100%; object-fit: cover;" alt="Flæskesteg Gjol Kro restaurant"></div>
             <div class="grid-section" id="content6">
                 <p>Guests can enjoy our à la carte menu in the restaurant, in the bar area and on the terrace.</p>
                 <form method="get" action="menu.html">
@@ -96,7 +92,6 @@
                 <form method="get" action="reservation.html">
                     <button type="submit" id="book-us">Book us</button>
                 </form>
-            </div>
             </div>
         </section>
     </main>
