--- a/reservation.html
+++ b/reservation.html
@@ -25,113 +25,115 @@
                 <ul class="menu">
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="#">Our story</a></li>
+                    <li><a href="ourstory.html">Our story</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a id="reservation-cta" href="reservation.html">Reservation</a></li>
                 </ul>
             </div>
         </nav>
-        <div class="container2">
-            <div class="title">RESERVATION</div>
-            <div class="content">
-                <form action="#">
-                    <div class="user-details">
-                        <div class="input-box">
-                            <span class="details">Name</span>
-                            <input type="text" name="firstName" id="firstName" placeholder="Enter your full name "
-                                required autocomplete="on" />
-                        </div>
-                        <div class="input-box">
-                            <span class="details">Email</span>
-                            <input type="email" name="email" id="email" placeholder="Enter your email" required
-                                autocomplete="on" />
-                        </div>
-                        <div class="input-box">
-                            <span class="date">Date</span>
-                            <input id="calendar" type="date" required>
-                        </div>
-                        <div class="input-box">
-                            <span class="time">Time</span>
-                            <input id="clock" type="time" required>
-                        </div>
-
-                        <div class="input-box">
-                            <span class="details">Guest</span>
-                            <input type="text" placeholder="Enter guest number" required>
-                        </div>
-                        <div class="input-box">
-                            <span class="details">Notes</span>
-                            <input type="text" placeholder="Allergies & perferences...">
-                        </div>
-
+    </header>
+    <div class="container2">
+        <div class="title">RESERVATION</div>
+        <div class="content">
+            <form action="#">
+                <div class="user-details">
+                    <div class="input-box">
+                        <span class="details">Name</span>
+                        <input type="text" name="firstName" id="firstName" placeholder="Enter your full name " required
+                            autocomplete="on" />
                     </div>
-                    <label id="policy" for="terms">I agree to the <a target=”_blank” style="color:beige" href="privacypolicy.html">Terms</a> and the <a
-                            style="color:beige" target=”_blank” href="privacypolicy.html">Privacy
-                            Policy</a> </label>
-                    <input type="checkbox" id="terms2" name="terms" value="terms" required />
-                    <div class="button2">
-                        <input type="submit" value="SUBMIT">
+                    <div class="input-box">
+                        <span class="details">Email</span>
+                        <input type="email" name="email" id="email" placeholder="Enter your email" required
+                            autocomplete="on" />
+                    </div>
+                    <div class="input-box">
+                        <span class="date">Date</span>
+                        <input id="calendar" type="date" required>
+                    </div>
+                    <div class="input-box">
+                        <span class="time">Time</span>
+                        <input id="clock" type="time" required>
                     </div>
 
-                </form>
+                    <div class="input-box">
+                        <span class="details">Guest</span>
+                        <input type="text" placeholder="Enter guest number" required>
+                    </div>
+                    <div class="input-box">
+                        <span class="details">Notes</span>
+                        <input type="text" placeholder="Allergies & perferences...">
+                    </div>
+
+                </div>
+                <label id="policy" for="terms">I agree to the <a target=”_blank” style="color:beige"
+                        href="privacypolicy.html">Terms</a> and the <a style="color:beige" target=”_blank”
+                        href="privacypolicy.html">Privacy
+                        Policy</a> </label>
+                <input type="checkbox" id="terms2" name="terms" value="terms" required />
+                <div class="button2">
+                    <input type="submit" value="SUBMIT">
+                </div>
+
+            </form>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="footer-container">
+            <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_white.svg" style="height:80px;"
+                    alt="Gjol Kro Logo"></a>
+            <div class="footer-row">
+                <div class="footer-col">
+                    <h4>Explore more</h4>
+                    <ul>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a href="ourstory.html">Our story</a></li>
+                        <li><a href="privacypolicy.html">Privacy Policy</a></li>
+                    </ul>
+                    <form method="get" action="reservation.html">
+                        <button type="submit" class="footer-button-reserve">Reserve a table</button>
+                    </form>
+                </div>
+                <div class="footer-col">
+                    <h4 id="contact">Contact us</h4>
+                    <ul>
+                        <li>22 36 76 87</li>
+                        <li>Fhordgade 18, <br> 9440 Aabybro</li>
+                        <li id="click-here">Click here to view on google maps:</li>
+                    </ul>
+                    <form method="get"
+                        action="https://www.google.hu/maps/place/Gj%C3%B8l+Kro+-+Kroen+ved+fjorden/@57.0638002,9.6974996,17z/data=!3m1!4b1!4m5!3m4!1s0x46493a98644f49d3:0xee64761e113795b1!8m2!3d57.0638002!4d9.6996883">
+                        <button type="submit" class="footer-button">View on map</button>
+                    </form>
+                </div>
+                <div class="footer-col">
+                    <h4>Visit us</h4>
+                    <ul>
+                        <li>Monday: Closed</li>
+                        <li>Tuesday: Closed</li>
+                        <li>Wednesday: 12 Pm - 10 pm</li>
+                        <li>Thursday: 12 pm - 10 pm</li>
+                        <li>Friday: 12 pm - 10 pm</li>
+                        <li>Saturday: 12 pm - 10 pm</li>
+                        <li>Sunday: 12 pm - 10 pm</li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Follow us</h4>
+                    <div class="social-links">
+                        <a href="https://www.facebook.com/GjoelKro" target="_blank"><i id="facebook-icon"
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/gjoel_kro/" target="_blank"><i
+                                class="fab fa-instagram "></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>© Copyright. All rights reserved.</p>
             </div>
         </div>
-        <footer class="footer">
-            <div class="footer-container">
-                <a href="index.html"><img class="logo" src="assets/images/Gjol-Kro_logo_white.svg" style="height:80px;"
-                        alt="Gjol Kro Logo"></a>
-                <div class="footer-row">
-                    <div class="footer-col">
-                        <h4>Explore more</h4>
-                        <ul>
-                            <li><a href="menu.html">Menu</a></li>
-                            <li><a href="gallery.html">Gallery</a></li>
-                            <li><a href="ourstory.html">Our story</a></li>
-                            <li><a href="privacypolicy.html">Privacy Policy</a></li>
-                        </ul>
-                        <form method="get" action="reservation.html">
-                            <button type="submit" class="footer-button-reserve">Reserve a table</button>
-                        </form>
-                    </div>
-                    <div class="footer-col">
-                        <h4 id="contact">Contact us</h4>
-                        <ul>
-                            <li>22 36 76 87</li>
-                            <li>Fhordgade 18, <br> 9440 Aabybro</li>
-                            <li id="click-here">Click here to view on google maps:</li>
-                        </ul>
-                        <form method="get"
-                            action="https://www.google.hu/maps/place/Gj%C3%B8l+Kro+-+Kroen+ved+fjorden/@57.0638002,9.6974996,17z/data=!3m1!4b1!4m5!3m4!1s0x46493a98644f49d3:0xee64761e113795b1!8m2!3d57.0638002!4d9.6996883">
-                            <button type="submit" class="footer-button">View on map</button>
-                        </form>
-                    </div>
-                    <div class="footer-col">
-                        <h4>Visit us</h4>
-                        <ul>
-                            <li>Monday: Closed</li>
-                            <li>Tuesday: Closed</li>
-                            <li>Wednesday: 12 Pm - 10 pm</li>
-                            <li>Thursday: 12 pm - 10 pm</li>
-                            <li>Friday: 12 pm - 10 pm</li>
-                            <li>Saturday: 12 pm - 10 pm</li>
-                            <li>Sunday: 12 pm - 10 pm</li>
-                        </ul>
-                    </div>
-                    <div class="footer-col">
-                        <h4>Follow us</h4>
-                        <div class="social-links">
-                            <a href="https://www.facebook.com/GjoelKro" target="_blank"><i id="facebook-icon"
-                                    class="fab fa-facebook-f"></i></a>
-                            <a href="https://www.instagram.com/gjoel_kro/" target="_blank"><i
-                                    class="fab fa-instagram "></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="copyright">
-                    <p>© Copyright. All rights reserved.</p>
-                </div>
-            </div>
-        </footer>
+    </footer>
 
 </body>
 <script type="application/ld+json">
