--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="assets/menu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>Gjøl Kro Menu</title>
+    <title>Menu</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600&family=Roboto:wght@300;400;500;700&display=swap');
     </style>
@@ -22,6 +22,7 @@
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="ourstory.html">Our story</a></li>
+                    <li><a href="#contact">Contact</a></li>
                     <li><a id="reservation-cta" href="reservation.html">Reservation</a></li>
                 </ul>
             </div>
