--- a/reservation.html
+++ b/reservation.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/reservation.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" type="image/png" href="assets/favicons/favicon-32x32.png" sizes="32x32" />
-    <title>Gjøl Kro Reservation</title>
+    <title>Reservation</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&display=swap');
